data/derived/sp14/progs/unify/prog4683.ml.out
Characters 74-84:
  | n -> [] :: (n mod 10);;
               ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list list
